--- a/Project1_ODE_Solver/ode_solver.ipynb
+++ b/Project1_ODE_Solver/ode_solver.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "## Condições iniciais\n",
     "\n",
-    "- $C_1(0) = 10 \\ \\mathrm{mol}$  \n",
+    "- $C_1(0) = 0.292 \\ \\mathrm{mol}$  \n",
     "- $C_2(0) = 0 \\ \\mathrm{mol}$  \n",
     "- $C_3(0) = 0 \\ \\mathrm{mol}$  \n",
     "\n",
@@ -74,8 +74,8 @@
     "\n",
     "## Parâmetros cinéticos\n",
     "\n",
-    "- $\\gamma_1 = 0.1 \\ \\mathrm{min^{-1}}$ — constante de decomposição da sacarose  \n",
-    "- $\\gamma_2 = 0.01 \\ \\mathrm{min^{-1}}$ — constante de conversão da glicose + frutose em produtos finais  \n",
+    "- $\\gamma_1 = 0.083 \\ \\mathrm{min^{-1}}$ — constante de decomposição da sacarose  \n",
+    "- $\\gamma_2 = 0.010 \\ \\mathrm{min^{-1}}$ — constante de conversão da glicose + frutose em produtos finais  \n",
     "\n",
     "---\n",
     "\n",
@@ -89,10 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import fsolve\n",
@@ -103,24 +104,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "C1_initial = 0.2922\n",
+    "# Define the initial conditions\n",
+    "C1_initial = 0.292\n",
     "C2_initial = 0\n",
     "C3_initial = 0\n",
     "\n",
+    "# Define the parameters\n",
     "y1 = 0.083\n",
     "y2 = 0.010"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the differential equations for the system\n",
     "def C1_f(C1_ant, C2_ant, C3_ant, t):\n",
     "    return -y1 * C1_ant\n",
     "\n",
@@ -133,10 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the analytical solution for the system\n",
     "def analytical_solution(t):\n",
     "    C1 = C1_initial * np.exp(-y1 * t)\n",
     "    C2 = (C1_initial * y1 / (y2 - y1)) * (np.exp(-y1 * t) - np.exp(-y2 * t))\n",
@@ -146,10 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Euler explicit method for solving the system of equations\n",
     "def Euler_explicit(C1_0, C2_0, C3_0, t, h):\n",
     "    C1 = np.zeros(len(t))\n",
     "    C2 = np.zeros(len(t))\n",
@@ -166,10 +172,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Runge-Kutta 4th order method for solving the system of equations\n",
     "def RK4(C1_0, C2_0, C3_0, t, h):\n",
     "    C1 = np.zeros(len(t))\n",
     "    C2 = np.zeros(len(t))\n",
@@ -198,10 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Adams-Bashforth method for solving the system of equations\n",
     "def Adams_bashforth(C1_0, C2_0, C3_0, t, h):\n",
     "    C1 = np.zeros(len(t))\n",
     "    C2 = np.zeros(len(t))\n",
@@ -219,10 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the residual function for the fsolve resolution to Adams-Moulton method\n",
     "def residual(X, C1i, C2i, C3i, C1im1, C2im1, C3im1, C1im2, C2im2, C3im2, t_ip1, t_i, t_im1, t_im2, h):\n",
     "    C1_ip1, C2_ip1, C3_ip1 = X\n",
     "    r1 = C1_ip1 - C1i - (h/24) * (\n",
@@ -248,10 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Adams-Moulton method for solving the system of equations\n",
     "def Adams_moulton(C1_0, C2_0, C3_0, t, h):\n",
     "    C1 = np.zeros(len(t))\n",
     "    C2 = np.zeros(len(t))\n",
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,15 +325,18 @@
     }
    ],
    "source": [
+    "#  Define the time steps and run the methods\n",
     "hs = [10, 5, 1, 0.5, 0.1, 0.05, 0.01]\n",
     "results = []\n",
     "\n",
     "for h in hs:\n",
     "    t = np.arange(0, 500, h)\n",
+    "    # Calculate the analytical solution for the current time steps\n",
     "    C1_exact, C2_exact, C3_exact = analytical_solution(t)\n",
     "    \n",
     "    # Euler\n",
     "    start = time.time()\n",
+    "    # Use the initial conditions and time steps to compute the numerical solution using Euler's method\n",
     "    C1_euler, C2_euler, C3_euler = Euler_explicit(C1_initial, C2_initial, C3_initial, t, h)\n",
     "    elapsed_euler = time.time() - start\n",
     "    error_euler_c1 = np.max(np.abs(C1_euler - C1_exact))\n",
@@ -332,6 +345,7 @@
     "\n",
     "    # RK4\n",
     "    start = time.time()\n",
+    "    # Use the initial conditions and time steps to compute the numerical solution using RK4 method\n",
     "    C1_rk4, C2_rk4, C3_rk4 = RK4(C1_initial, C2_initial, C3_initial, t, h)\n",
     "    elapsed_rk4 = time.time() - start\n",
     "    error_rk4_c1 = np.max(np.abs(C1_rk4 - C1_exact))\n",
@@ -340,6 +354,8 @@
     "\n",
     "    # Adams-Bashforth\n",
     "    start = time.time()\n",
+    "    # Use the initial conditions and time steps to compute the numerical solution using Adams-Bashforth method\n",
+    "    # The first four values are computed using RK4 to provide a starting point\n",
     "    C1_ab, C2_ab, C3_ab = Adams_bashforth(C1_initial, C2_initial, C3_initial, t, h)\n",
     "    elapsed_ab = time.time() - start\n",
     "    error_ab_c1 = np.max(np.abs(C1_ab - C1_exact))\n",
@@ -348,12 +364,15 @@
     "\n",
     "    # Adams-Moulton\n",
     "    start = time.time()\n",
+    "    # Use the initial conditions and time steps to compute the numerical solution using Adams-Moulton method\n",
+    "    # The first four values are computed using RK4 to provide a starting point\n",
     "    C1_am, C2_am, C3_am = Adams_moulton(C1_initial, C2_initial, C3_initial, t, h)\n",
     "    elapsed_am = time.time() - start\n",
     "    error_am_c1 = np.max(np.abs(C1_am - C1_exact))\n",
     "    error_am_c2 = np.max(np.abs(C2_am - C2_exact))\n",
     "    error_am_c3 = np.max(np.abs(C3_am - C3_exact))\n",
     "\n",
+    "    # Store the results for each method and step size\n",
     "    results.append({\n",
     "        \"h\": h,\n",
     "        \"Steps\": len(t),\n",
@@ -379,16 +398,19 @@
     "        \"Time Adams-M\": elapsed_am\n",
     "    })\n",
     "\n",
+    "# Convert the results to a DataFrame for better visualization\n",
     "df_results = pd.DataFrame(results)\n",
+    "# Display the results\n",
     "print(df_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the results for one selected time step\n",
     "h_plot = 5\n",
     "t = np.arange(0, 500, h_plot)\n",
     "\n",
@@ -410,10 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plotting functions\n",
     "def plot_absolute_error(C_exact, C_all_methods, var_name):\n",
     "    plt.figure(figsize=(8,5))\n",
     "    labels = list(C_all_methods.keys())\n",
@@ -430,7 +453,6 @@
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
     "\n",
     "def plot_error_vs_h(df, var):\n",
     "    plt.figure(figsize=(8, 5))\n",
@@ -453,8 +475,7 @@
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n",
-    "\n",
+    "    \n",
     "def plot_execution_time(df):\n",
     "    plt.figure(figsize=(8, 5))\n",
     "    methods = ['Euler', 'RK4', 'Adams-B', 'Adams-M']\n",
@@ -492,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -537,12 +558,13 @@
     }
    ],
    "source": [
+    "# Plot the concentration vs time for each method\n",
     "plot_concentration_vs_time(results_time, t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +599,7 @@
     }
    ],
    "source": [
+    "# Plot the error vs time for each variable\n",
     "plot_absolute_error(C1_exact,  {k: (v[0], None, None) for k, v in results_time.items()}, 'C1')\n",
     "plot_absolute_error(C2_exact, {k: (v[1], None, None) for k, v in results_time.items()}, 'C2')\n",
     "plot_absolute_error(C3_exact, {k: (v[2], None, None) for k, v in results_time.items()}, 'C3')"
@@ -584,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -619,6 +642,7 @@
     }
    ],
    "source": [
+    "# Plot the error vs step size for each variable\n",
     "plot_error_vs_h(df_results, 'C1')\n",
     "plot_error_vs_h(df_results, 'C2')\n",
     "plot_error_vs_h(df_results, 'C3')"
@@ -626,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +665,7 @@
     }
    ],
    "source": [
+    "# Plot the execution time for each method in relation to step size\n",
     "plot_execution_time(df_results)"
    ]
   }
