--- a/Project2/Poisson.ipynb
+++ b/Project2/Poisson.ipynb
@@ -1,5 +1,176 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a522add3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse import csc_matrix\n",
+    "from scipy.sparse.linalg import spsolve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1330684c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coeficiente de difusão q(u) = 1 + u^2\n",
+    "def q_func(u):\n",
+    "    return 1.0 + u**2\n",
+    "\n",
+    "# Vetor da solução exata u(x,y) = sin(πx)sin(πy)\n",
+    "def calculate_exact_solution(N, h):\n",
+    "    \n",
+    "    exact_u = np.zeros((N, N))\n",
+    "    \n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            x = (i + 1) * h\n",
+    "            y = (j + 1) * h\n",
+    "            exact_u[i, j] = np.sin(np.pi * x) * np.sin(np.pi * y)\n",
+    "    \n",
+    "    return exact_u.flatten()\n",
+    "\n",
+    "# Compara a solução numérica com a exata\n",
+    "def calculate_error(numerical_U, exact_U, h):\n",
+    "    \n",
+    "    error_vector = numerical_U - exact_U\n",
+    "    l2_error = np.sqrt(h**2 * np.sum(error_vector**2))\n",
+    "    max_error = np.max(np.abs(error_vector))\n",
+    "    \n",
+    "    return l2_error, max_error\n",
+    "\n",
+    "# Cálculo do vetor do sistema não linear F(U)\n",
+    "def calculate_F(U_vector, N, h, source_f):\n",
+    "    \n",
+    "    u = np.zeros((N + 2, N + 2))\n",
+    "    u[1:-1, 1:-1] = U_vector.reshape((N, N))\n",
+    "    F = np.zeros((N, N))\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            r, c = i + 1, j + 1\n",
+    "            \n",
+    "            u_c = u[r, c]\n",
+    "            u_n = u[r+1,c]\n",
+    "            u_s = u[r-1,c]\n",
+    "            u_e = u[r,c+1]\n",
+    "            u_w = u[r,c-1]\n",
+    "            \n",
+    "            q_c = q_func(u_c)\n",
+    "            q_n = q_func(u_n)\n",
+    "            q_s = q_func(u_s)\n",
+    "            q_e = q_func(u_e)\n",
+    "            q_w = q_func(u_w)\n",
+    "\n",
+    "            q_ip12j = (q_e + q_c) / 2.0\n",
+    "            q_im12j = (q_w + q_c) / 2.0\n",
+    "            q_ijp12 = (q_n + q_c) / 2.0\n",
+    "            q_ijm12 = (q_s + q_c) / 2.0\n",
+    "\n",
+    "            x_term = q_ip12j * (u_e - u_c) - q_im12j * (u_c - u_w)\n",
+    "            y_term = q_ijp12 * (u_n - u_c) - q_ijm12 * (u_c - u_s)\n",
+    "            \n",
+    "            f_ij = source_f[i * N + j]\n",
+    "            F[i, j] = (x_term + y_term) / h**2 - f_ij\n",
+    "            \n",
+    "    return F.flatten()\n",
+    "\n",
+    "# Monta a matriz Jacobiana J = dF/dU no formato CSR\n",
+    "def jacobian_csr(U_vector, N, h):\n",
+    "    \n",
+    "    u = np.zeros((N + 2, N + 2))\n",
+    "    u[1:-1, 1:-1] = U_vector.reshape((N, N))\n",
+    "    \n",
+    "    values = []\n",
+    "    column_indices = []\n",
+    "    row_pointers = [0]\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            r, c = i + 1, j + 1\n",
+    "            \n",
+    "            u_c = u[r,c]\n",
+    "            u_n = u[r+1,c]\n",
+    "            u_s = u[r-1,c]\n",
+    "            u_e = u[r,c+1]\n",
+    "            u_w = u[r,c-1]\n",
+    "            \n",
+    "            q_c = q_func(u_c)\n",
+    "            q_n = q_func(u_n)\n",
+    "            q_s = q_func(u_s)\n",
+    "            q_e = q_func(u_e)\n",
+    "            q_w = q_func(u_w)\n",
+    "\n",
+    "            # dF/du_{i,j-1} (Oeste)\n",
+    "            if j > 0:\n",
+    "                val = (q_w + q_c)/2.0 - u_w * (u_c - u_w) \n",
+    "                column_indices.append(i * N + (j - 1))\n",
+    "                values.append(val / h**2)\n",
+    "\n",
+    "            # dF/du_{i-1,j} (Sul)\n",
+    "            if i > 0:\n",
+    "                val = (q_s + q_c)/2.0 - u_s * (u_c - u_s) \n",
+    "                column_indices.append((i - 1) * N + j)\n",
+    "                values.append(val / h**2)\n",
+    "            \n",
+    "            # dF/du_{i,j} (Central)\n",
+    "            val_c = (-(q_e+q_w+q_n+q_s)/2.0 - 2*q_c) - u_c * ((u_e-u_c) + (u_w-u_c) + (u_n-u_c) + (u_s-u_c)) \n",
+    "            column_indices.append(i * N + j)\n",
+    "            values.append(val_c / h**2)\n",
+    "\n",
+    "            # dF/du_{i+1,j} (Norte)\n",
+    "            if i < N - 1:\n",
+    "                val = (q_n + q_c)/2.0 - u_n * (u_c - u_n) \n",
+    "                column_indices.append((i + 1) * N + j)\n",
+    "                values.append(val / h**2)\n",
+    "\n",
+    "            # dF/du_{i,j+1} (Leste)\n",
+    "            if j < N - 1:\n",
+    "                val = (q_e + q_c)/2.0 - u_e * (u_c - u_e) \n",
+    "                column_indices.append(i * N + (j + 1))\n",
+    "                values.append(val / h**2)\n",
+    "            \n",
+    "            row_pointers.append(len(values))\n",
+    "            \n",
+    "    return np.array(values), np.array(column_indices), np.array(row_pointers)\n",
+    "\n",
+    "# Resolve o sistema F(U)=0 com o Método de Newton\n",
+    "def solve_newton(initial_U, N, h, source_f, tol=1e-6, max_iter=50):\n",
+    "    \n",
+    "    U_k = np.copy(initial_U) \n",
+    "    \n",
+    "    print(\"Iniciando Método de Newton...\")\n",
+    "    \n",
+    "    for k in range(max_iter):\n",
+    "        \n",
+    "        F_k = calculate_F(U_k, N, h, source_f)\n",
+    "        J_values, J_cols, J_pointers = jacobian_csr(U_k, N, h)\n",
+    "        \n",
+    "        # s_k = solve_lu_csr(J_values, J_cols, J_pointers, -F_k)\n",
+    "        J_csc = csc_matrix((J_values, J_cols, J_pointers), shape=(N*N, N*N))\n",
+    "        s_k = spsolve(J_csc, -F_k) \n",
+    "\n",
+    "        U_k = U_k + s_k\n",
+    "        \n",
+    "        step_norm = np.linalg.norm(s_k, np.inf)\n",
+    "        print(f\"Iteração {k+1:2d}: Norma do passo = {step_norm:.2e}\")\n",
+    "        \n",
+    "        if step_norm < tol:\n",
+    "            print(f\"\\nConvergência atingida em {k+1} iterações.\")\n",
+    "            return U_k\n",
+    "\n",
+    "    print(\"\\nMáximo de iterações excedido.\")\n",
+    "    \n",
+    "    return U_k"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
