--- a/Project2/Poisson.ipynb
+++ b/Project2/Poisson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a522add3",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21012189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve_GC(val, col_ind, row_ptr, b, x0, tol=1e-10):\n",
+    "    \"\"\"\n",
+    "    Calculate the conjugate gradient of a sparse matrix.\n",
+    "    \"\"\"\n",
+    "    n = len(row_ptr) - 1\n",
+    "    x = x0.copy()  # Initial guess\n",
+    "    r = np.zeros(n)  # Residual\n",
+    "    p = np.zeros(n)  # Search direction\n",
+    "    Ap = np.zeros(n)  # A*p\n",
+    "\n",
+    "    # Initial residual r = b + A*x\n",
+    "    for i in range(n):\n",
+    "        for j in range(row_ptr[i], row_ptr[i + 1]):\n",
+    "            col = col_ind[j]\n",
+    "            value = val[j]\n",
+    "            r[i] += value * x[col]\n",
+    "        r[i] = b[i] + r[i]\n",
+    "    # Initial search direction p = r\n",
+    "    p = -r.copy()\n",
+    "\n",
+    "    # Initial residual norm\n",
+    "    r_norm = sum(r[i] * r[i] for i in range(n))\n",
+    "    A_r = np.zeros(n)\n",
+    "    for i in range(n):\n",
+    "        for j in range(row_ptr[i], row_ptr[i + 1]):\n",
+    "            col = col_ind[j]\n",
+    "            value = val[j]\n",
+    "            A_r[i] += value * r[col]\n",
+    "    A_r_r = sum(r[i] * A_r[i] for i in range(n))\n",
+    "    if A_r_r == 0:\n",
+    "        return x\n",
+    "    q1 = r_norm / A_r_r\n",
+    "    x1 = x + q1 * r\n",
+    "    r1 = r - q1 * A_r\n",
+    "\n",
+    "    x_x1 = x1 - x\n",
+    "    x_x1_norm = sum(x_x1[i] * x_x1[i] for i in range(n))\n",
+    "    x1_norm = sum(x1[i] * x1[i] for i in range(n))\n",
+    "    r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
+    "\n",
+    "    while np.sqrt(r_norm) > tol and (np.sqrt(x_x1_norm)/np.sqrt(x1_norm) > tol):\n",
+    "        alpha = r1_norm / r_norm\n",
+    "        p = -r1 + alpha * p\n",
+    "        A_p = np.zeros(n)\n",
+    "        for i in range(n):\n",
+    "            for j in range(row_ptr[i], row_ptr[i + 1]):\n",
+    "                col = col_ind[j]\n",
+    "                value = val[j]\n",
+    "                A_p[i] += value * p[col]\n",
+    "        q1 = r1_norm / sum(p[i] * A_p[i] for i in range(n))\n",
+    "        x = x1\n",
+    "        x1 = x + q1 * p\n",
+    "        r = r1\n",
+    "        r1 = r - q1 * A_p\n",
+    "        r_norm = sum(r[i] * r[i] for i in range(n))\n",
+    "        r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
+    "        x_x1 = x1 - x\n",
+    "        x_x1_norm = sum(x_x1[i] * x_x1[i] for i in range(n))\n",
+    "        x1_norm = sum(x1[i] * x1[i] for i in range(n))\n",
+    "        r1_norm = sum(r1[i] * r1[i] for i in range(n))\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "1330684c",
    "metadata": {},
    "outputs": [],
@@ -82,8 +153,8 @@
     "    return F.flatten()\n",
     "\n",
     "# Monta a matriz Jacobiana J = dF/dU no formato CSR\n",
-    "def jacobian_csr(U_vector, N, h):\n",
-    "    \n",
+    "def calculate_jacobian_csr(U_vector, N, h):\n",
+    "\n",
     "    u = np.zeros((N + 2, N + 2))\n",
     "    u[1:-1, 1:-1] = U_vector.reshape((N, N))\n",
     "    \n",
@@ -146,15 +217,15 @@
     "    U_k = np.copy(initial_U) \n",
     "    \n",
     "    print(\"Iniciando Método de Newton...\")\n",
-    "    \n",
+    "\n",
     "    for k in range(max_iter):\n",
     "        \n",
     "        F_k = calculate_F(U_k, N, h, source_f)\n",
-    "        J_values, J_cols, J_pointers = jacobian_csr(U_k, N, h)\n",
-    "        \n",
-    "        # s_k = solve_lu_csr(J_values, J_cols, J_pointers, -F_k)\n",
-    "        J_csc = csc_matrix((J_values, J_cols, J_pointers), shape=(N*N, N*N))\n",
-    "        s_k = spsolve(J_csc, -F_k) \n",
+    "        J_values, J_cols, J_pointers = calculate_jacobian_csr(U_k, N, h)\n",
+    "\n",
+    "        s_k = solve_GC(J_values, J_cols, J_pointers, -F_k, U_k)\n",
+    "        # J_csc = csc_matrix((J_values, J_cols, J_pointers), shape=(N*N, N*N))\n",
+    "        # s_k = spsolve(J_csc, -F_k) \n",
     "\n",
     "        U_k = U_k + s_k\n",
     "        \n",
@@ -169,6 +240,76 @@
     "    \n",
     "    return U_k"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7ddecf95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def solve_broyden(val, col_ind, row_ptr, b, x0, tol=1e-10, max_iter=100):\n",
+    "#     \"\"\"\n",
+    "#     Calculate the Broyden's method for solving a system of equations.\n",
+    "#     \"\"\"\n",
+    "#     n = len(row_ptr) - 1\n",
+    "#     x = x0.copy()  # Initial guess\n",
+    "#     r = [0] * n  # Residual\n",
+    "#     p = [0] * n  # Search direction\n",
+    "#     F = F(x) # Function value at x\n",
+    "\n",
+    "#     A_inverse = np.zeros((n, n))  # Inverse of the Jacobian approximation\n",
+    "#     for i in range(n):\n",
+    "#         for j in range(row_ptr[i], row_ptr[i + 1]):\n",
+    "#             col = col_ind[j]\n",
+    "#             value = val[j]\n",
+    "#             A_inverse[i][col] = value\n",
+    "#     A_inverse = np.linalg.inv(A_inverse)  # Initial inverse of the Jacobian\n",
+    "\n",
+    "#     s = np.zeros(n)  # Step\n",
+    "#     for i in range(n):\n",
+    "#         for j in range(row_ptr[i], row_ptr[i + 1]):\n",
+    "#             col = col_ind[j]\n",
+    "#             value = val[j]\n",
+    "#             s[i] += value * F[col]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "95ffd4de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iniciando Método de Newton...\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "bad operand type for unary -: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m source_f = np.array([\u001b[32m2\u001b[39m * np.pi**\u001b[32m2\u001b[39m * np.sin(np.pi * (i + \u001b[32m1\u001b[39m) * h) * np.sin(np.pi * (j + \u001b[32m1\u001b[39m) * h) \n\u001b[32m      4\u001b[39m                      \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N) \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(N)])  \u001b[38;5;66;03m# Fonte f(x,y)\u001b[39;00m\n\u001b[32m      5\u001b[39m initial_U = np.zeros((N, N)).flatten()  \u001b[38;5;66;03m# Initial guess (zero everywhere)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m x = \u001b[43msolve_newton\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_U\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource_f\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSolução numérica obtida: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 134\u001b[39m, in \u001b[36msolve_newton\u001b[39m\u001b[34m(initial_U, N, h, source_f, tol, max_iter)\u001b[39m\n\u001b[32m    131\u001b[39m F_k = calculate_F(U_k, N, h, source_f)\n\u001b[32m    132\u001b[39m J_values, J_cols, J_pointers = calculate_jacobian_csr(U_k, N, h)\n\u001b[32m--> \u001b[39m\u001b[32m134\u001b[39m s_k = \u001b[43msolve_GC\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJ_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_cols\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ_pointers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43mF_k\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mU_k\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    135\u001b[39m \u001b[38;5;66;03m# J_csc = csc_matrix((J_values, J_cols, J_pointers), shape=(N*N, N*N))\u001b[39;00m\n\u001b[32m    136\u001b[39m \u001b[38;5;66;03m# s_k = spsolve(J_csc, -F_k) \u001b[39;00m\n\u001b[32m    138\u001b[39m U_k = U_k + s_k\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36msolve_GC\u001b[39m\u001b[34m(val, col_ind, row_ptr, b, x0, tol)\u001b[39m\n\u001b[32m     17\u001b[39m     r[i] = b[i] + r[i]\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Initial search direction p = r\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m p = \u001b[43m-\u001b[49m\u001b[43mr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Initial residual norm\u001b[39;00m\n\u001b[32m     22\u001b[39m r_norm = \u001b[38;5;28msum\u001b[39m(r[i] * r[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n))\n",
+      "\u001b[31mTypeError\u001b[39m: bad operand type for unary -: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "N = 3\n",
+    "h = 1.0 / (N + 1)  # Grid spacing\n",
+    "source_f = np.array([2 * np.pi**2 * np.sin(np.pi * (i + 1) * h) * np.sin(np.pi * (j + 1) * h) \n",
+    "                     for i in range(N) for j in range(N)])  # Fonte f(x,y)\n",
+    "initial_U = np.zeros((N, N)).flatten()  # Initial guess (zero everywhere)\n",
+    "x = solve_newton(initial_U, N, h, source_f)\n",
+    "print(f\"Solução numérica obtida: {x}\")"
+   ]
   }
  ],
  "metadata": {
@@ -178,7 +319,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
